# Recrutitment-task

./: .gitignore  LICENSE  README.md  pyproject.toml  solution.py  test_virtual_column 1.py
